auth routes almost finished
